# verifiers-multimodal

./: COMPARISON.md  QUICK_START.sh  TEST_RUN.md  debug_nccl.sh  pyproject.toml  test_env_multimodal.py  test_env_multimodal_multiturn.py  test_environment.py  test_image.py  test_multiple_colors.py  test_number_reading.py  test_simple_shape.py
adapters/: README.md  __init__.py  qwen3_vl_adapter.py
configs/vf-rl/: multimodal-example.toml  test-multimodal-multiturn.toml  test-multimodal.toml
environments/coordinates_game/: README.md  coordinates_game.py  pyproject.toml
multimodal_rl/: __init__.py  config.py  trainer.py
scripts/: vf-train-multimodal.py
tests/: test_multimodal_inputs.py  test_multimodal_trainer_edge_cases.py  test_multimodal_trainer_math.py
verifiers/: types.py
verifiers/envs/: env_group.py  environment.py
verifiers/rl/trainer/multimodal/: QUICKSTART.md  README.md  __init__.py  config.py  trainer.py
verifiers/utils/: eval_utils.py  message_utils.py
