[project]
name = "coordinates-game"
description = "10x10 grid coordinate detection environment with visual axis labels"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.7",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["coordinates_game.py", "pyproject.toml"]

[tool.uv.sources]
verifiers = { path = "../..", editable = true }

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 3

